# charon

./: .gcloudignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.gateway  LICENSE  README.md  cloudbuild.gateway.yaml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  crypto.rs  lib.rs  payment.rs  wire.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  main.rs
crates/gateway/tests/: relay.rs
docs/: README.md  api-reference.md  consumer-guide.md  gateway-deploy.md  mint-operations.md  provider-guide.md  quickstart.md  setup-checklist.md
spec/: 00-overview.md  01-architecture.md  02-identity-auth.md  03-wire-protocol.md  04-encryption.md  05-payments.md  06-provider.md  07-consumer-nemesis8.md  08-discovery-reputation.md  09-gateway.md  10-security-threat-model.md  11-deployment.md  12-ui-dashboard.md  13-mcp.md  14-compute.md  15-approval-console.md  README.md
spec/inbox/: prepaid-credit-spec.md
