[workspace]
resolver = "2"
members = ["crates/core", "crates/gateway", "crates/client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/DeepBlueDynamics/charon"

[workspace.dependencies]
charon-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
snow = "0.9"            # Noise Protocol (IK / 25519 / ChaChaPoly / BLAKE2s)
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
blake2 = "0.10"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
bytes = "1"
async-stream = "0.3"
toml = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
