[package]
name = "charon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "charon"
path = "src/main.rs"

[dependencies]
charon-core.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
clap.workspace = true
reqwest.workspace = true
axum.workspace = true
bytes.workspace = true
async-stream.workspace = true
base64.workspace = true
toml.workspace = true
