[package]
name = "charon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
base64.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
snow.workspace = true
blake2.workspace = true
