[package]
name = "charon-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "charon_gateway"
path = "src/lib.rs"

[[bin]]
name = "charon-gateway"
path = "src/main.rs"

[dependencies]
charon-core.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
clap.workspace = true
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }
cdk.workspace = true
cdk-http-client.workspace = true
cdk-sqlite.workspace = true
sha2 = "0.10"
firestore.workspace = true
google-cloud-storage.workspace = true

[dev-dependencies]

reqwest = { workspace = true }

